--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "E:/Sources/xiaomi_bat_stats/.pio/build/esp12e/firmware.elf",
-            "projectEnvName": "esp12e",
+            "executable": "E:/Sources/xiaomi_bat_stats/.pio/build/esp01/firmware.elf",
+            "projectEnvName": "esp01",
             "toolchainBinDir": "C:/Users/jairf/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
@@ -25,8 +25,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "E:/Sources/xiaomi_bat_stats/.pio/build/esp12e/firmware.elf",
-            "projectEnvName": "esp12e",
+            "executable": "E:/Sources/xiaomi_bat_stats/.pio/build/esp01/firmware.elf",
+            "projectEnvName": "esp01",
             "toolchainBinDir": "C:/Users/jairf/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
@@ -34,8 +34,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "E:/Sources/xiaomi_bat_stats/.pio/build/esp12e/firmware.elf",
-            "projectEnvName": "esp12e",
+            "executable": "E:/Sources/xiaomi_bat_stats/.pio/build/esp01/firmware.elf",
+            "projectEnvName": "esp01",
             "toolchainBinDir": "C:/Users/jairf/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
