--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
-platform = espressif8266
-board = esp12e
-framework = arduino
-lib_deps =
-    knolleary/PubSubClient
-    bblanchon/ArduinoJson
+; [env:esp12e]
+; platform = espressif8266
+; board = esp12e
+; framework = arduino
 
-upload_port = COM9
-monitor_port = COM9
+
+[env:esp01]
+platform = espressif8266
+board = esp01
+framework = arduino
 monitor_speed = 115200
+upload_speed = 115200
